Fixed spacing in menu below

--- a/styles/overview.css
+++ b/styles/overview.css
@@ -37,11 +37,7 @@ article {
 .komponenten {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-}
-
-.komponenten div {
-    padding-bottom: 1em;
+    justify-content: space-between;
 }
 
 .komponenten label {
